refactor: Use modern JDK features.